--- a/src/pages/Home/Rating/Rating.module.sass
+++ b/src/pages/Home/Rating/Rating.module.sass
@@ -11,6 +11,10 @@
   height: calc(31% - 3rem)
   background-image: linear-gradient( 180deg, $color1 80%, $color2 98%, $color3 100% )
 
+  @media screen and (min-width: $mobile)
+    width: 75%
+    height: 45%
+
   &_img
     display: flex
     align-items: center
