--- a/src/pages/Home/Finish/Finish.module.sass
+++ b/src/pages/Home/Finish/Finish.module.sass
@@ -12,6 +12,10 @@
   height: calc(31% - 3rem)
   background-image: linear-gradient( 180deg, $color1 80%, $color2 98%, $color3 100% )
 
+  @media screen and (min-width: $mobile)
+    width: 75%
+    height: 45%
+
   &__div
     display: flex
     justify-content: center
@@ -22,3 +26,20 @@
     color: $orange
     width: 65%
     height: 1.8rem
+
+    p
+      font-size: 14px
+      font-family: $font
+
+  &_title
+    font-family: $font
+    font-size: 1.5rem
+    font-weight: $title-weight
+    color: $white
+
+  &_text
+    font-family: $font
+    color: $medium-grey
+    line-height: 1.2rem
+    font-size: 16px
+    text-align: center
