FIX - View fixed implement

--- a/src/pages/Home/Rating/Rating.module.sass
+++ b/src/pages/Home/Rating/Rating.module.sass
@@ -11,7 +11,7 @@
   height: calc(31% - 3rem)
   background-image: linear-gradient( 180deg, $color1 80%, $color2 98%, $color3 100% )
 
-  @media screen and (min-width: $mobile)
+  @media screen and (max-width: 768px)
     width: 75%
     height: 45%
 
